--- a/Rapport/2Appendix/AcceptNoise.tex
+++ b/Rapport/2Appendix/AcceptNoise.tex
@@ -50,7 +50,7 @@ The procedure for this experiment is described as follows:
 \section{Data Extraction}
 The raw data the system can be found at the CD, \\
  \path{CD://Maalinger/Maalinger200516 - Acceptance test for SNR}\\
-There are 30 bands from 20 Hz to 20 kHz, see \autoref{tb:freqBandsAppendixNoise}, where a magnitude is given in dB for each band. 1 measurement have been taken for both the bypass and the full system. The value was sampled over a period of 20 seconds. The mean for each measurement has been calculated. The two bands 25 Hz and 20000 Hz has been removed from the plots because of large deviation and therefore not deemed useful. 
+There are 30 bands from 20 Hz to 20 kHz, see \autoref{tb:freqBandsAppendixNoise}, where a magnitude is given in dB for each band. One measurement have been taken for both the bypass and the full system. The value was sampled over a period of 20 seconds. The mean for each measurement has been calculated. The two bands 25 Hz and 20000 Hz has been removed from the plots because of large deviation and therefore not deemed useful. 
 
 \begin{table}[H]
 \centering
