--- a/Rapport/2Appendix/AcceptRMS.tex
+++ b/Rapport/2Appendix/AcceptRMS.tex
@@ -1,8 +1,8 @@
 \chapter{Accepttest of RMS Limiter}\label{app:journal_Frequency_Response2}
-The purpose of this test is verify requirement \textbf{XX} concerning RMS compressor.
+The purpose of this test is verify requirement 10, 11, 12, 13, and 14 concerning the RMS limiter.
 
 \section{Setup}
-The setup of this test are depicted in \textbf{XX}, where the equipment is catalogued in \textbf{XX}, and described as follows:
+The setup of this test are depicted in \autoref{fig:AcceptFreqResponse}, where the equipment is catalogued in \autoref{tab:UsedEquipmentFreqResponse}, and described as follows:
 
 \begin{itemize}
 	\item Frequency response will be measured by a Harmonie analyzer.
