--- a/Rapport/2Appendix/AcceptRMS.tex
+++ b/Rapport/2Appendix/AcceptRMS.tex
@@ -89,4 +89,9 @@ Due to large deviations in the 25 Hz and 20 kHz region, the measurements for the
 
 \section{Conclusion}
 
+From \autoref{fig:RMSlimiter} it is hard to conclude whether the RMS limiter works or not. Under the development of the RMS limiter, the RMS limiter showed good results when lower thresholds where used. By using lower thresholds the system where able to keep the RMS value below 500 Hz under the threshold. In the acceptance test where the threshold was changed to the calculated threshold, it seen like RMS limiter is never activated. 
+
+
+ showed that the RMS limiter works as es can be concluded that the RMS limiter does not attenuate as intended.
+
 %From the test it can be concluded that the RMS limiter does not functions as expected. The gain values for the lowest frequencies are not correct since they are not attenuated equally. A not is created in the begin which can not be accounted for. There is however a slight attenuation of the lower frequencies present.  
