--- a/Rapport/1Chapters/1Preanalysis/Introduction.tex
+++ b/Rapport/1Chapters/1Preanalysis/Introduction.tex
@@ -1,14 +1,14 @@
 \chapter{Introduction}
 Loudspeakers today come in all sizes, types and shapes, has existed for over a century and is owned by most people. In the 1980's the active loudspeaker, began popping up and has gained popularity ever since. The active loudspeaker and other multimedia have attributed to the a rapid development in signal processors as the demand of digital signal processing grew higher. With digital signal processing possibilities of processing signals such as equalization, compression and image processing were possible.
 
-These possibilities signal processing means that the potential of the active loudspeaker is greater than the passive loudspeaker because the active loudspeaker has the amplifier which means it can supply peripheral electronics with power.
+These possibilities in signal processing means that the potential of the active loudspeaker is greater than the passive loudspeaker because the active loudspeaker has the amplifier which means it can supply peripheral electronics with power.
 
 
 % Danger
-To compensate for the lack of bass the user may want to boost the bass in order to achieve a more rich sound. Because of the limited size, increasing the bass can potentially lead to sound distortions and cause the coil to hit the back plate of the driver if played too loud. The back plate hit will damage the loudspeaker and shorten the life time of the loudspeaker.
+To compensate for the lack of bass the user may want to boost the bass in order to achieve a more rich sound. Because of the limited size, increasing the bass can potentially lead to sound distortions and cause the coil to hit the backplate of the driver if played too loud. The backplate hit will damage the loudspeaker and shorten the life time of the loudspeaker.
 
 % Protection and optimal sound
-To avoid potential damage, a system must be designed to prevent the coil from hitting the back plate. A common solution is to hard clip the signal whenever it is beyond the capabilities of the loudspeaker, as this ensures that the signal level is kept in the rated region. This is however creates distortion which is undesirable. The aim of this project is therefore to develop a loudspeaker protective system, which can protect the loudspeaker against damage and still keep the amount distortion at a low level.
+To avoid potential damage, a system must be designed to prevent the coil from hitting the back plate. A common solution is to hard clip the signal whenever it is beyond the capabilities of the loudspeaker, as this ensures that the signal level is kept in the rated region. This however creates distortion which is undesirable. The aim of this project is therefore to develop a loudspeaker protective system, which can protect the loudspeaker against damage and still keep the amount distortion at a low level.
 
 
 
