--- a/Rapport/1Chapters/EndFormalia/Discussion.tex
+++ b/Rapport/1Chapters/EndFormalia/Discussion.tex
@@ -1,1 +1,10 @@
 \chapter{Discussion}
+The project started with the examination of feedback as a possible solution for protecting but it was ultimately choosen to use a feedforward system instead. However what kind of system type would be optimal for protecting loudspeakers?
+
+Feedforward is the type used in sound equipment today, it has the advantage of using no external sensor of hardware but reacts based on input signal. These reactions could be based on simple systems such as the one in this project or very complex systems with models of for example diaphragm excursion. 
+
+Feedback is not used in sound equipment today because of different reasons. Easy ways of measuring diaphragm excusion has not been derived and sensors are to expensive to use in products. In this project for example both expensive and cheap accelerometers were used to measure with and test showed the cheap sensors had a very high noise floor making them unusable for music signals. But are there other ways of measuring the diaphragm excursion on?
+
+
+
+The advantage of using a feedback over feedforward is its flexiblity, because it will react and not predict.     
