--- a/Rapport/1Chapters/Implementation/finalProduct.tex
+++ b/Rapport/1Chapters/Implementation/finalProduct.tex
@@ -1,4 +1,4 @@
-\chapter{Final Product}
+\chapter{Final Product} \label{ch:finalProduct}
 
 The final product which is implemented is shown in \autoref{fig:designRealFullFinalProduct}. The system has seven stages with different sampling rates. The peak-limiter from \autoref{fig:designRealBlock} is not implemented in the final product. This is due time constraint as there were not enough time to determine the parameter for the limiter.
 
