--- a/Rapport/2Appendix/AcceptanceTEST.tex
+++ b/Rapport/2Appendix/AcceptanceTEST.tex
@@ -1,12 +1,10 @@
 \chapter{Acceptance test of system}\label{app:acceptance_test}
 
-The journal documents the acceptance test of the implemented system. The main goal of the trails is to replicate the system used in \autoref{app:journal_speaker_test} but implemented with the DSP as linkage between source and amplifier. The system is performed in a scaled environment where the the gain of the entire system is 3 dB lower than expected. This is done to protect the speaker against potential overloading.
-
-
+The journal documents the acceptance test of the implemented system. The main purpose of the tests is to replicate the system used in \autoref{app:journal_speaker_test}, but with the DSP in-between the source and amplifier. The system is performed in a scaled environment where the the gain of the entire system is 3 dB lower than expected. This is done to protect the speaker against potential overloading.
 
 \section{Setup}
 
-The setup of this experiment are depicted in Figure \ref{figure:SpeakertestSetup}, where the equipment is cataloged in \autoref{tab:UsedEquipmentAcceptance}, and described as follows:
+The setup of this experiment are depicted in Figure \ref{figure:SpeakertestSetup}, where the equipment is catalogued in \autoref{tab:UsedEquipmentAcceptance}, and described as follows:
 
 \begin{itemize}
 \item Vibration and \gls{SPL} will be measured by a microphone at a distance 1 meter in accordance with IEC 60268-5 Sound System Equipment - Part 5: Loudspeaker
@@ -29,7 +27,7 @@ The setup of this experiment are depicted in Figure \ref{figure:SpeakertestSetup
 \item The gain will be adjusted on the DSP
 \end{itemize}
 
-The reason of gain calibration is to mimic the trails made in \autoref{app:journal_speaker_test}. With the gain calibrated to same level, the DSP gain can be neglected.  Furthermore the speaker will be placed in the anechoic room to eliminate any external disturbances corresponding to the requirements demanded in the IEC 60268-5 standard.
+The reason of the gain calibration is to mimic the tests made in \autoref{app:journal_speaker_test}. With the gain calibrated to same level, the DSP gain can be neglected. Furthermore the speaker will be placed in the anechoic room to eliminate any external disturbances corresponding to the requirements demanded in the IEC 60268-5 standard.
 
 \subsection*{Test Setup}
 
@@ -72,14 +70,14 @@ The reason of gain calibration is to mimic the trails made in \autoref{app:journ
 The producer for this experiment is described as follows:
 \vspace{-5mm}
 \begin{enumerate}
-\item The poweramplifier is fixed at a gain of +19 dB
+\item The power amplifier is fixed at a gain of +19 dB
 \item Vacate the anechoic room and seal the room.
 \item Start recording in Adobe Audition for:
 \begin{itemize}
 \item Input signal and DSP output signal
 \item Microphone and Accelerometer
 \end{itemize}
-\item Play the sweep into the dsp at following signal levels (in RMS)
+\item Play the sweep into the DSP at following signal levels (in RMS)
 \begin{enumerate}
 	\item 223 mV (-7 dB)
 	\item 250 mV (-6 dB)
@@ -92,7 +90,7 @@ The producer for this experiment is described as follows:
 \end{enumerate}
 \item After sweep, stop recording all channels
 \item Save recordings as \path{.wav} file
-\item Repeat step 2 through 6 for the different gain levels in the dsp.
+\item Repeat step 2 through 6 for the different gain levels in the DSP.
 \end{enumerate}
 
 
@@ -108,7 +106,7 @@ The producer for this experiment is described as follows:
 
 \section{Data Extraction}
 
-8 Different measurements were taken with different amplification levels.
+8 different measurements were taken with different amplification levels.
 
 The recordings can be found on:\\
 \scalebox{0.7}{
@@ -121,12 +119,12 @@ And is indexed in folders \scalebox{0.8}{\path{Measure_X}}, where X corresponds 
 \item DPS Output signal: \scalebox{0.8}{\path{DSP_Output_0XX}}
 \end{itemize}
 \vspace*{-5mm}
-The Script used to create all graphs are located at:\\
+The script used to create all graphs are located at:\\
 \scalebox{0.7}{
 \path{CD://Maalinger/Maalinger030316 - Loudspeaker test/Measurements030316/downsampling_graph.m} and \path{FFT.m}}\\
 
 \subsection{Raw Data}
-The raw data is plotted showing the amplitude according to the time. It shows the characteristic of the same signal recorded in \autoref{app:journal_speaker_test}. Only three trials are showed to give an illustration of the increase in amplitude.
+The raw data is plotted showing the amplitude according to the time. It shows the characteristic of the same signal recorded in \autoref{app:journal_speaker_test}. Only three tests are showed to give an illustration of the increase in amplitude.
 \begin{figure}[H]
 	\centering
 	\tikzsetnextfilename{Driver2}
@@ -167,9 +165,9 @@ The signals can be analyzed directly from the raw data. It shows, compared with 
 
 \section{Error sources}
 
-Few errors could have occurred during trials, since then only variable adjusted during between measurements were the gain of the amplifier. There were however problems with moving the setup from the control room were it was calibrated and then moved into the anechoic room. The calibration was done using an visual equalizer where the output was shown with a bar chart Hence the data should bee seen with a tolerance of +/- 0.5 dB.
+Few errors could have occurred during tests, since the only variable adjusted during between measurements was the gain of the amplifier. There were however problems with moving the setup from the control room were it was calibrated and then moved into the anechoic room. The calibration was done using an visual equalizer where the output was shown with a bar chart Hence the data should bee seen with a tolerance of +/- 0.5 dB.
 
 
 \section{Conclusion}
 
-It can be concluded that the signal no longer creates a hit against the back plate. This was present before at the same amplitudes. The signal has now been attenuate enough to suppress these spikes. however the characteristics of the signal remains the same, even at higher amplitudes. It should however be noted that the trials were conducted in a scaled scenario where the gain of the amplifier was dampen by 3 dB, which would make the system activate at a lower threshold than 150 watts.  
+It can be concluded that the signal no longer creates a hit against the back plate. This was present before at the same amplitudes. The signal has now been attenuate enough to suppress these spikes. However the characteristics of the signal remains the same, even at higher amplitudes. It should however be noted that the trials were conducted in a scaled scenario where the gain of the amplifier was attenuated by 3 dB, which would make the system activate at a lower threshold than 150 watts.  
