--- a/Rapport/1Chapters/RMS/Design.tex
+++ b/Rapport/1Chapters/RMS/Design.tex
@@ -4,7 +4,7 @@ It is now possible to determine the threshold which should be used and the corre
 \text{Needed Attenuation} = \frac{\text{Threshold}}{\text{RMS}} \enhed{.}
 \end{equation}
 
-From the equation it is possible to determine exactly the needed attenuation factor to apply. A graphical representation of different gains according to different thresholds can be shown on \autoref{fig:GainOverview}.
+From the equation it is possible to determine exactly the needed attenuation factor to apply. A graphical representation of different gains according to different thresholds is shown on \autoref{fig:GainOverview}.
 
 \begin{figure}[H]
 \centering
@@ -14,18 +14,24 @@ From the equation it is possible to determine exactly the needed attenuation fac
 \label{fig:GainOverview}
 \end{figure}
 
-The attenuation values can the be adjusted according to the threshold desired. It is again important to know that every value above 1 will in the system be seen as 1, since a value lower than the threshold should always be sent through the system with no intervention.  
+The attenuation values can then be adjusted according to the threshold desired. It is again important to know that every value above 1 will in the system be seen as 1, since a value lower than the threshold should always be sent through the system with no intervention.  
 
 
 \subsection*{Sample Size}
 The system will indirectly be introducing an attack and release time which is determined through the sample time/size of the RMS algorithm. Increasing the samples size used for the RMS calculation will increase attack and release time since an increased sample size decreases every sample's influence on the RMS value. Hence it is important to determine the minimum needed sample size in order for the system to analyze properly. The minimum amount of samples used in the algorithm will be determined by looking at the lowest frequency in each band and determine how many samples needed to represent an entire period. The first band has a lower common audible frequency of 30 Hz. From equation \ref{eq:Minsample} it is possible to determine the minimum needed samples:
 \begin{equation}\label{eq:Minsample}
-\text{Needed samples} = \frac{f_s}{\text{Desired frequency}} = \frac{375 \text{ Hz}}{30 \text{ Hz}} = 12.5 \enhed{.}
+\text{N} = \frac{f_s}{f_1} = \frac{375 \text{ Hz}}{30 \text{ Hz}} = 12.5 \enhed{.}
 \end{equation} 
-In order to implement this most efficiently it is set to 16 samples which makes the division possible by bit-shifting 4 times. Because the bands are octave bands the sample size is the same for every band accept 0 Hz to 530 Hz which is as follows:
+\begin{where}
+\va{$N$}{is the needed sample size}{.}
+\va{$f_1$}{is the lowest frequency of the band}{Hz}
+\end{where} 
+
+In order to implement this most efficiently it is set to 16 samples which makes the division possible by bit-shifting 4 times. Because the bands are octave bands the sample size is the same for every band except 0 Hz to 530 Hz which is as follows:
 \begin{equation}
-\text{Needed samples} = \frac{3000 \text{ Hz}}{30 \text{ Hz}} = 100 \enhed{.}
-\end{equation} 
+\text{N} = \frac{3000 \text{ Hz}}{30 \text{ Hz}} = 100 \enhed{.}
+\end{equation}
+
 The sample size is adjusted again in order to avoid division in the DSP which results in a sample size of 128 samples. 
 
 \subsection*{Threshold}
@@ -42,7 +48,8 @@ It is now possible to determine the threshold in the DSP. From requirement 10 th
 \va{$G$}{is the total gain of the system, equal to 40 dB}{.}
 \va{$R$}{is the impedans of the loudspeaker, equal to 6 $\Omega$}{$\Omega$}
 \end{where}
-Because the threshold should be in relation to an internal value in the DSP the result of \autoref{eq:Threscalculated} it is divided with 0.5 $\text{V}_\text{RMS}$.
+
+Because the threshold should be in relation to an internal value in the DSP the result of \autoref{eq:Threscalculated} is divided with 0.5 $\text{V}_\text{RMS}$.
 \begin{equation}
 \text{Threshold}_\text{DSP}= \frac{0.3 \text{V}_\text{RMS}}{0.5 \text{V}_\text{RMS}} = 0.6 \enhed{.}
 \end{equation}
