--- a/Rapport/1Chapters/Implementation/IntroductionImplementation.tex
+++ b/Rapport/1Chapters/Implementation/IntroductionImplementation.tex
@@ -1,5 +1,5 @@
 \chapter{CPU introduction}
-This chapter will give a general introduction to the TMS320C5515 DSP and its programming languages C, Assembler and how they function together. An overview of the TMS320C55xx architecture can be seen on \autoref{fig:DSP}. It has four different processing units in the CPU, the instrution buffer unit (UI), the program flow unit (PU), the adress-data flow unit (AU) and the data computation unit (UI) connected to 12 different adress and databusses.  
+This chapter will give a general introduction to the TMS320C5515 DSP and its programming languages C, Assembler and how they function together. An overview of the TMS320C55xx architecture can be seen on \autoref{fig:DSP}. It has four different processing units in the CPU, the instrution buffer unit (IU), the program flow unit (PU), the adress-data flow unit (AU) and the data computation unit (UI) connected to 12 different adress and databusses.  
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.7\textwidth]{C2.png}
@@ -13,14 +13,14 @@ The CPU has a harvard strucure which means that data and program memory is seper
 \caption{Simplified block diagram of the C55xx IU.}
 \label{fig:IU}
 \end{figure}
-The PU, see \autoref{fig:PU}, manages program execution using pipelining for execution efficiency. The program counter (PC) tracks program execution every clock cycle while the adress generator generates a 24 bit adress which 16 Mbytes of memory space. The last component of the PC is the pipeline protection unit which protects the pipeline from non sequential execution such as call, branch or return.
+The PU, see \autoref{fig:PU}, manages program execution using pipelining for execution efficiency. The program counter (PC) tracks program execution every clock cycle while the adress generator generates a 24 bit adress which accesses 16 Mbytes of memory space. The last component of the PU is the pipeline protection unit which protects the pipeline from non sequential execution such as call, branch or return.
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.4\textwidth]{C0.png}
 \caption{Simplified block diagram of the C55xx PU.}
 \label{fig:PU}
 \end{figure}
-The AU, see \autoref{fig:AU}, functions as the data acces manager. The AU consists of eight 23-bit extended auxiliary registers (XAR0-XAR7), four 16-bit temporary registers (T0-T3), a 23-bit coefficient pointer (XCDP), a 23-bit stack pointer (XSP), a 16-bit ALU and can support up to five circular buffers. The AU allows up to two address registers and coefficient pointers working togehter to access two data samples and one coefficient simultaneously in on clock cycle, so parallelity can be used to reduce computation time. 
+The AU, see \autoref{fig:AU}, functions as the data access manager. The AU consists of eight 23-bit extended auxiliary registers (XAR0-XAR7), four 16-bit temporary registers (T0-T3), a 23-bit coefficient pointer (XCDP), a 23-bit stack pointer (XSP), a 16-bit ALU and can support up to five circular buffers. The AU allows up to two address registers and coefficient pointers working togehter to access two data samples and one coefficient simultaneously in on clock cycle, so parallelity can be used to reduce computation time. 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.5\textwidth]{C4.png}
@@ -45,4 +45,4 @@ The reason why C is bad at computational critical algorithms are because the C c
 \caption{Examples of argument-passing conventions.}
 \label{fig:CAsm}
 \end{figure}
-This concludes a quick general description of the CPU which leads to main program.
+This concludes a quick general description of the CPU which leads to the main program.
