--- a/Rapport/1Chapters/Implementation/filterImplementation.tex
+++ b/Rapport/1Chapters/Implementation/filterImplementation.tex
@@ -5,7 +5,7 @@ The chapter will describe the three functions which is used in the multirate sta
 \item int16 delayBX(int16 dataIn);
 \item int16 upFuncX(int16 dataIn,int16 band);
 \end{itemize}
-Where downFuncX is used to decimate and spectral invert the input sample, delayBX is used to delay a sample by number of samples and upFuncX is used interpolate the input sample (dataIn) and add the input sample (band) to the interpolated signal. In both downFuncX and upFuncX a filter function is used called FIR1 which runs a FIR filter on a data array, which will also be decribed in this chapter. 
+Where downFuncX is used to decimate and spectral invert the input sample, delayBX is used to delay a sample a by number of samples and upFuncX is used to interpolate the input sample (dataIn) and add the input sample (band) to the interpolated signal. In both downFuncX and upFuncX a filter function is used called FIR1 which runs a FIR filter on a data array, which will also be described in this chapter. 
 
 
 \section{Decimation and Spectral Inversion implementation} \label{sec:ImpFilterDEC}
@@ -28,7 +28,7 @@ An input sample must be read into a buffer of a size equal to the filter taps. T
 \item First in first out (FIFO).
 \item Circular
 \end{itemize} 
-A FIFO buffer is the simple of the two buffer types but it also requires more computation power than a circular buffer. This is because in a FIFO buffer all data must be moved as seen in \autoref{fig:FIFO} while in a circular buffer, see \autoref{fig:Circular}, a pointer can be moved so instead of moving data the pointer moves to the oldest data. Therefore instead of costing the same number of instructions equal to size of the buffer, it only cost the setup of the circular buffer and one instruction per move.   
+A FIFO buffer is the simplest of the two buffer types but it also requires more computation power than a circular buffer. This is because in a FIFO buffer all data must be moved as seen in \autoref{fig:FIFO} while in a circular buffer, see \autoref{fig:Circular}, a pointer can be moved so instead of moving data the pointer moves to the oldest data. Therefore instead of costing the same number of instructions equal to size of the buffer, it only cost the setup of the circular buffer and one instruction per move.   
 \begin{figure}[H]
 \centering
 \begin{subfigure}[t]{0.49\textwidth}
@@ -74,7 +74,7 @@ When data is read the FIR routine is called which runs the FIR filter on the dat
 \caption{FIR implementation.}
 \label{fig:FirImp}
 \end{figure}
-\todo[inline]{Skal billedet laves selv?}
+
 Every tap is a coefficient which is multiplied with a sample and all multiplications are there after accumulated which gives the output of the filter. This is done with the MAC instruction, as seen in \autoref{ls:FIRimp}.
 \begin{lstlisting}[language={[x86masm]Assembler}, caption = {FIR algorithm.},label={ls:FIRimp}]
 	MOV #0, AC1					; Clear AC1
@@ -95,7 +95,7 @@ Every tap is a coefficient which is multiplied with a sample and all multiplicat
 	RET
 \end{lstlisting}
 Where: \\
-- bCoeff, is a pointer to the start of the coefficients in memory. 
+- bCoeff, is a pointer to the start of the coefficients in the memory. 
 
 Data is first moved into one of the five internal circular buffers with line (1-8). The internal circular buffers uses specific registers as buffers and pointers, but when the pointer is incremented at the end of the buffer it automatically returns to the start without the need of a reset function. When the circular buffer is set up for the data, the adress of the coefficients are moved into the "AR1", hereby both data and coefficients pointers can be incremented without error for the number of repeats (51) nescessary to calculate the output of the filter. 
 
@@ -113,7 +113,7 @@ Spectral inversion is done by using the output of the FIR routine "T0" and a del
 	MOV AC0,*(#band1)
 \end{lstlisting}
 
-The last function of decimation block is downsampling the output of the FIR routine. This is done by not overwriting the output every second time which is done with a counter as seen on \autoref{ls:downsampling}.
+The last function of the decimation block is downsampling the output of the FIR routine. This is done by not overwriting the output every second time which is done with a counter as seen on \autoref{ls:downsampling}.
 
 \begin{lstlisting}[language={[x86masm]Assembler}, caption = {Downsampling.},label={ls:downsampling}]
 	CMP *(#k1)==#0, TC1
@@ -125,7 +125,7 @@ The last function of decimation block is downsampling the output of the FIR rout
 where: \\
 - k1, is a counter.
 
-DownOut1 is called, when "k1" equals 0, a new output is given in "down1" which holds the downsampled output. If "k1" is not 0 a new output is not given, and when "k1" equals 2 it is resets. The reason then for running the FIR routine every sample is because of the spectral inversion which requires a new output every sample. This concludes the implementation of the decimation block.
+DownOut1 is called, when "k1" equals 0, a new output is given in "down1" which holds the downsampled output. If "k1" is not 0 a new output is not given, and when "k1" equals 2 it is reset. The reason then for running the FIR routine every sample is because of the spectral inversion which requires a new output every sample. This concludes the implementation of the decimation block.
 
 \section{Delay Implemetation}
 The delay block delays a sample x times which is done by implementing a circular buffer with a pointer. The input bandX which is one of the outputs from the decimation block is read into a buffer which is the size of the delay the same way as data is read into the decimation buffer as seen on \autoref{ls:delay}.  
@@ -143,7 +143,7 @@ The delay block delays a sample x times which is done by implementing a circular
 	CALLCC resetPtri1, TC1		
 \end{lstlisting}
 
-The pointer "D1" always points to the oldest sample which has been delayed x samples, so before it is overwritten it is moved to "TO" which is the output register of the function. When the sample has been moved the new sample can overwrite and it can thereby be delayed x times before it is outputted again.
+The pointer "D1" always points to the oldest sample which has been delayed x samples, so before it is overwritten it is moved to "T0" which is the output register of the function. When the sample has been moved the new sample can overwrite and it can thereby be delayed x times before it is outputted again.
 
 \section{Interpolation Implementation}
 The interpolation block is seen on \autoref{fig:upsamplingSimulationCopy}.
@@ -170,7 +170,7 @@ The way a sample is read in is the same as \autoref{ls:ReadingInData} but every 
 	MOV #0, *AR0				; Move the value in T0 to the address
 	RET
 \end{lstlisting}
-reading in data is controlled by a counter in the way as \autoref{ls:downsampling}, with the difference that it reads in data when the counter is 0, reads in a 0 if the counter is 1 and reset if the counter is 2. It should be noted that the data buffer is twice the size of the filter because the order is equal which means the number of taps is odd, which result in an error in memory if the buffer size is odd. This is because if a zero is inserted after every sample, then in an odd buffer size a zero is inserted next to another zero instead next to data when the data pointer is reset, which will not happen in an equal size buffer. 
+Reading in data is controlled by a counter in the way as \autoref{ls:downsampling}, with the difference that it reads in data when the counter is 0, reads in a 0 if the counter is 1 and reset if the counter is 2. It should be noted that the data buffer is twice the size of the filter because the order is equal which means the number of taps is odd, which result in an error in memory if the buffer size is odd. This is because if a zero is inserted after every sample, then in an odd buffer size a zero is inserted next to another zero instead of next to data when the data pointer is reset, which will not happen in an equal size buffer. 
 
 When data is loaded into the buffer the FIR routine as showed in \autoref{ls:FIRimp} runs with the interpolation filter descirbed in \autoref{sec:IntFilter}, so this will not be described again. 
 
