--- a/Rapport/00setup/mybib.bib
+++ b/Rapport/00setup/mybib.bib
@@ -153,5 +153,12 @@
   year = {2016},
 }
 
+@book{signalProcessBook,
+	author    = {Sen M. Kuo, Bob H. Lee, Wenshun Tian},
+	title     = {Real-Time Digital Signal Processing. Fundamentals, Implementations and Applications.},
+	publisher = {John Wiley \& Sons, Ltd},
+	edition  = {3rd},
+	year      = {2013},
+}
 
 
