--- a/Rapport/0formalia/titlepage.tex
+++ b/Rapport/0formalia/titlepage.tex
@@ -72,5 +72,5 @@
   Fredrik Bajers Vej 7\\
   DK-9220 Aalborg Ø\\}
  }{
- This is a box for an Abstract waiting to be written.
+ This project concerns the development of a loudspeaker protective system which prevents the loudspeaker coil from hitting the backplate. Multi-band RMS limiters are implemented in a multi-rate system with multi-stages.
 }
